# DelfosEngine

./: CMakeLists.txt  GitPush.py  LICENSE  README.md
include/ImGUI/backends/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h
include/ImGUI/misc/cpp/: imgui_stdlib.cpp
lib/LibPNG/: libpng16.lib
src/: CMakeLists.txt  main.cpp
src/Shaders/: GameObject.frag  GameObject.vert
src/private/Core/: Core.cpp
src/private/Engine/Editor/: Editor.cpp
src/private/Engine/GameObject/: GameObject.cpp
src/private/Engine/Project/: ProjectManager.cpp
src/private/Engine/Scene/: Camera.cpp  EditorCamera.cpp  Scene.cpp  SceneManager.cpp
src/private/Engine/Script/: CMakeLists.txt  F16.cpp  F16.h  UserScripts.cpp
src/private/Engine/Shader/: Shader.cpp
src/private/IO/: FileManager.cpp
src/private/Math/Quaternion/: Quaternion.cpp
src/private/Math/Transform/: Transform.cpp
src/private/Math/Vector/: Vector2.cpp  Vector3.cpp
src/private/Module/Input/: Input.cpp
src/public/Core/: Core.h
src/public/Engine/Editor/: Editor.h
src/public/Engine/GameObject/: GameObject.h
src/public/Engine/Project/: ProjectManager.h
src/public/Engine/Scene/: Camera.h  EditorCamera.h  Scene.h  SceneManager.h
src/public/Engine/Shader/: Shader.h
src/public/IO/: FileManager.h
src/public/Math/Quaternion/: Quaternion.h
src/public/Math/Transform/: Transform.h
src/public/Math/Vector/: Vector2.h  Vector3.h
src/public/Module/Input/: Input.h
